--- a/index.html
+++ b/index.html
@@ -201,31 +201,31 @@
       </div>
     </div>
     <div class="row anim anim-v-slide td-1">
-      <div class="col-md-6 col-lg-8">
+      <div class="col-6 col-lg-8">
         <div class="row chains-stores-slider">
-          <div class="col-lg-3">
+          <div class="col-6 col-lg-3">
             <img src="/img/chains-stores/1.jpg" alt="фото" width="165">
             <div class="chains-stores-slider__year">2008</div>
             <p class="chains-stores-slider__description">Год открытия первого магазина РУЛЬ</p>
           </div>
-          <div class="col-lg-3">
+          <div class="col-6 col-lg-3">
             <img src="/img/chains-stores/2.jpg" alt="фото" width="165">
             <div class="chains-stores-slider__year">2014</div>
             <p class="chains-stores-slider__description">Год открытия второго магазина РУЛЬ</p>
           </div>
-          <div class="col-lg-3">
+          <div class="col-6 col-lg-3">
             <img src="/img/chains-stores/3.jpg" alt="фото" width="165">
             <div class="chains-stores-slider__year">2017</div>
             <p class="chains-stores-slider__description">Год открытия третьего магазина РУЛЬ</p>
           </div>
-          <div class="col-lg-3">
+          <div class="col-6 col-lg-3">
             <img src="/img/chains-stores/4.jpg" alt="фото" width="165">
             <div class="chains-stores-slider__year">2018</div>
             <p class="chains-stores-slider__description">Запуск федеральной франшизы РУЛЬ</p>
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-4">
+      <div class="col-6 col-lg-4">
         <div class="chains-stores__video">
           <img src="./img/video1.jpg" alt="video" width="350">
           <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="d-none popup-youtube chains-stores__video-title">История
@@ -286,9 +286,7 @@
         </div>
         <p class="essence__name-description grey-text sm-text-black">Один из основателей сети фирменных
           магазинов автозапчастей «РУЛЬ», 31 год</p>
-        <p class="essence__right-col-text">Правильная бизнес-стратегия за 8 лет превратила магазин с наличием 450 тысяч
-          рублей в сеть магазинов с
-          наличием товара на сумму более 30 миллионов рублей с собственным автотехцентром без привлечения кредитных
+        <p class="essence__right-col-text">Правильная бизнес-стратегия за 8 лет превратила магазин с наличием 450 тысяч рублей в сеть магазинов с многомиллионным наличием с собственным автотехцентром без привлечения кредитных
           средств.</p>
         <ul class="essence__list">
           <li class="essence__item">Спикер форума «Ты-предприниматель» управление малого бизнеса Администрации Липецкой
@@ -322,9 +320,9 @@
         <h2 class="bottom-line sell__title">Что мы продаем?</h2>
         <p class="subtitle">
           Мы торгуем автозапчастями для иномарок всех популярных моделей и не ограничиваемся сегментом
-          иномарок одной страны, мы мультибрендовый магазин. В наше время, это
+          иномарок одной страны, мы мультибрендовый магазин. В наше время это
           является неоспоримым преимуществом на данном рынке.</p>
-        <p class="subtitle pt-0"> Мы работаем только с проверенными и надежными поставщиками, мы уверены за качество
+        <p class="subtitle pt-0"> Мы работаем только с проверенными и надежными поставщиками, мы уверены в качестве
           нашего товара.
         </p>
       </div>
@@ -386,10 +384,10 @@
 <section class="accordion anim anim-v-slide">
   <div class="container">
     <div class="row accordion-wrapper">
-      <div class="col-3">
+      <div class="col-6 col-md-3">
         <img src="/img/icons/car-lift.svg" alt="">
       </div>
-      <div class="col-9 pb-30  ">
+      <div class="col-12 col-md-9 pb-30  ">
         <h2 class="bottom-line">Увеличьте прибыль
           своего автотехцентра</h2>
         <p class="pb-30">Если вы являетесь владельцем собственного автотецентра или небольшого автосервиса, то непременно стоит рассмотреть вариант открытия собсвтенного магазина автозапчастей, который в синергии позволит больше зарабатывать и автехцентру и магазину. Свяжитесь с нами и мы расскажем о собственном опыте и дадим четкий план действий. </p>
@@ -464,7 +462,7 @@
       <div class="col-md-8">
         <h2 class="bottom-line">Что вы получите?</h2>
         <p class="subtitle">
-          Мы, как никто другой, знаем, как важная поддержка на старте в бизнесе, нам так её не хватало в далеком 2008
+          Мы, как никто другой, знаем, как важна поддержка на старте в бизнесе, нам так её не хватало в далеком 2008
           году. Наша задача сегодня — помочь вам не совершить банальных ошибок, которые так больно отражаются на
           бизнес-счете предпринимателя. Давайте разберемся с основными аспектами нашего будущего сотрудничества:
         </p>
@@ -558,9 +556,6 @@
           <li class="installation__item">Настройка программного
             обеспечения
           </li>
-          <li class="installation__item">Поставки и настройка
-            системы видеонаблюдения
-          </li>
         </ul>
       </div>
       <div class="col-md-6 pl-30 col-lg-3 anim anim-v-slide td-3">
@@ -603,7 +598,7 @@
         </h3>
         <p class="subtitle pl-30">Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью
           опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров
-          и кладовщиков до руковдителя! </p>
+          и кладовщиков до руководителя! </p>
 
       </div>
       <div class="col-md-4 technologies-aside">
@@ -611,7 +606,7 @@
         <h4 class="technologies-aside__title pb-15">Конфигурация «РУЛЬ»</h4>
         <p class="technologies-aside__subtitle">Для менеджеров
           по продажам, кладовщиков
-          и руковдителя</p>
+          и руководителя</p>
       </div>
     </div>
     <div class="row pb-30 anim anim-v-slide">
@@ -622,7 +617,7 @@
         <p class="technologies__screen-description">
           Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже
           запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
-          кладовщиков до руковдителя!
+          кладовщиков до руководителя!
         </p>
         <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="d-none popup-youtube technologies__screen-link">
           <img src="/img/technologies/play-button.svg" alt="" width="56">
@@ -638,7 +633,7 @@
         <p class="technologies__screen-description">
           Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже
           запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
-          кладовщиков до руковдителя!
+          кладовщиков до руководителя!
         </p>
         <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="d-none popup-youtube technologies__screen-link">
           <img src="/img/technologies/play-button.svg" alt="" width="56">
@@ -654,7 +649,7 @@
         <p class="technologies__screen-description">
           Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже
           запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
-          кладовщиков до руковдителя!
+          кладовщиков до руководителя!
         </p>
         <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="d-none popup-youtube technologies__screen-link">
           <img src="/img/technologies/play-button.svg" alt="" width="56">
@@ -824,7 +819,7 @@
               Какие KPI влияют на результат работы персонала!
             </li>
             <li class="personal-aside___item">
-              Расскажем 9 золоты правил продаж, которые позволя менеджерам продавать лучше
+              Расскажем 9 золотых правил продаж, которые позволят менеджерам продавать лучше
             </li>
             <li class="personal-aside___item">
               Почему у вас не будет текучки и почему персонал будет вас любить
@@ -927,7 +922,7 @@
       </div>
       <div class="col-6 col-md-3 data-base__item anim anim-v-slide td-1">
         <div class="data-base__number">289</div>
-        <div class="data-base__description">Шаблона для полиграфии, визитки, рекламные макеты, таблички, вывески,
+        <div class="data-base__description">Шаблонов для полиграфии, визитки, рекламные макеты, таблички, вывески,
           наклейки, листовки, баннеры.
         </div>
       </div>
@@ -1064,12 +1059,12 @@
         <div class="d-flex flex-column">
           <img src="/img/promotion/b1.jpg" width="350" alt="фото банера">
           <h4>Разрабатываем макеты</h4>
-          <p class="mb-30">В нашей базе гигантское количество листовок, баннер, макетов для наружной рекламы и всего,
+          <p class="mb-30">В нашей базе гигантское количество листовок, баннеров, макетов для наружной рекламы и всего,
             что может только
             потребоваться. </p>
           <img src="/img/promotion/b4.jpg" width="350" alt="">
-          <h4>Постоянно оптимизируем и улучшаем интерне-трафик</h4>
-          <p>Мы вкладываем приличные средства в развитие интернет-рекламы, вы получите доступ к нашим рекламным каналам, проверенных временем.</p>
+          <h4>Постоянно оптимизируем и улучшаем интернет-трафик</h4>
+          <p>Мы вкладываем приличные средства в развитие интернет-рекламы, вы получите доступ к нашим рекламным каналам, проверенным временем.</p>
         </div>
       </div>
       <div class="col-md-4 promotion__item anim anim-v-slide td-1">
@@ -1078,7 +1073,7 @@
           <h4>Рисуем приветственные экраны</h4>
           <p class="mb-30">У каждого менеджера стоит монитор, который служит одновременно и мотиватором для
             дополнительных продаж,
-            личного знакомства с менеджером, в дополнение к бейджику и так же дублирующим экраном при сложностях в
+            личного знакомства с менеджером, в дополнение к бейджику и также дублирующим экраном при сложностях в
             подборе запчастей. </p>
           <img src="/img/promotion/b5.jpg" width="350" alt="">
           <h4>Изготавливаем видео-рекламу</h4>
@@ -1116,7 +1111,7 @@
       </div>
       <div class="col-md-6 pt-15">
         <h3>Контрлируйте работу из любой точки мира</h3>
-        <p class="font-italic">Полноценный доступ к базе со своего мобильного телефона, планшета или ноутбука, из дома, с отдыха — это реальность современного мира, которая позволяет оставаться эффективных в любое время. Все это будет у Вас! </p>
+        <p class="font-italic">Полноценный доступ к базе со своего мобильного телефона, планшета или ноутбука, из дома, с отдыха — это реальность современного мира, которая позволяет оставаться эффективным в любое время. Все это будет у Вас! </p>
       </div>
       <div class="col-md-5 offset-1">
         <img src="/img/control/control2.jpg" class="mt-30" width="437" alt="фото">
@@ -1137,7 +1132,7 @@
         <h3 class="left-square">РУЛЬ в Липецке,
           ул. Первомайская</h3>
         <ul class="profit__list">
-          <li class="profit__item"> Открылся май 2009 г.</li>
+          <li class="profit__item"> Открылся май 2008 г.</li>
           <li class="profit__item">Инвестиции: 5,8 млн руб.</li>
           <li class="profit__item">Окупаемость: 1,5 года</li>
           <li class="profit__item">В октябре 2017 года</li>
@@ -1163,7 +1158,7 @@
         <h3 class="left-square">РУЛЬ в Липецке,
           «Сырский рудник»</h3>
         <ul class="profit__list">
-          <li class="profit__item"> Открылась январь 2014 г.</li>
+          <li class="profit__item"> Открылся январь 2014 г.</li>
           <li class="profit__item">Инвестиции: 5,8 млн руб.</li>
           <li class="profit__item">Окупаемость: 1,5 года</li>
           <li class="profit__item">В апреле 2017 года</li>
@@ -1349,7 +1344,7 @@
   (function (d, w, c) {
     (w[c] = w[c] || []).push(function() {
       try {
-        w.yaCounter48913442 = new Ya.Metrika({
+        w.yaCounter48913442 = new Ya.Metrika2({
           id:48913442,
           clickmap:true,
           trackLinks:true,
@@ -1364,12 +1359,12 @@
       f = function () { n.parentNode.insertBefore(s, n); };
     s.type = "text/javascript";
     s.async = true;
-    s.src = "https://mc.yandex.ru/metrika/watch.js";
+    s.src = "https://mc.yandex.ru/metrika/tag.js";
 
     if (w.opera == "[object Opera]") {
       d.addEventListener("DOMContentLoaded", f, false);
     } else { f(); }
-  })(document, window, "yandex_metrika_callbacks");
+  })(document, window, "yandex_metrika_callbacks2");
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/48913442" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
