--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="page-header-title__description">СЕТЬ АВТОМАГАЗИНОВ «РУЛЬ»</div>
         </div>
         <p class="page-header__suggestion bottom-line bottom-line--header">Начните зарабатывать от 500 000 ₽ по нашим
-          методикам уже в апреле</p>
+          методикам уже в августе</p>
         <p class="page-header__description">Мы предлагаем вам открыть собственный фирменный магазин автозапчастей по
           франшизе «РУЛЬ» в вашем городе.</p>
       </div>
