--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       </div>
     </div>
     <div class="row anim anim-v-slide td-1">
-      <div class="col-6 col-lg-8">
+      <div class="col-12 col-md-6 col-lg-8">
         <div class="row chains-stores-slider">
           <div class="col-6 col-lg-3">
             <img src="/img/chains-stores/1.jpg" alt="фото" width="165">
@@ -225,7 +225,7 @@
           </div>
         </div>
       </div>
-      <div class="col-6 col-lg-4">
+      <div class="col-12 col-md-6 col-lg-4">
         <div class="chains-stores__video">
           <img src="./img/video1.jpg" alt="video" width="350">
           <a href="https://www.youtube.com/watch?v=cHq99TbnKCI" class="d-none popup-youtube chains-stores__video-title">История
