--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <a
           href="https://www.google.com/maps/embed?pb=!4v1525699626490!6m8!1m7!1sCAoSLEFGMVFpcFBCV2dnNVNaNGdmbnJ3aHVDcFJHd3NBQjlJTFRmSnlGU1FTcC1N!2m2!1d52.60255903594447!2d39.57727409899235!3f63.21746015424514!4f-24.718136293033396!5f0.7820865974627469"
           width="600" height="450" frameborder="0" style="border:0" allowfullscreen
-          class="format__tour popup-gmaps"><span>Запустить виртуальный тур</span></a>
+          class="format__tour modal-media" data-toggle="modal" data-target="#modal-media" ><span>Запустить виртуальный тур</span></a>
         <button class="format-item__btn" data-toggle="modal" data-target="#join">Запросить смету</button>
       </div>
       <div class="col-md-4 format-item anim anim-v-slide td-2">
@@ -186,7 +186,7 @@
     </div>
   </div>
 </section>
-<section class="video d-none">
+<section class="video">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -196,8 +196,7 @@
       </div>
       <div class="col-lg-8">
         <div class="video__player">
-          <iframe width="100%" height="324px" src="https://www.youtube.com/embed/2op_HAh1j3I" frameborder="0"
-                  allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <div class="video__youtube" id="rwbOSWBeuX0" style="width: 100%; height: 411px;"></div>
         </div>
       </div>
       <div class="col-lg-4">
@@ -452,14 +451,8 @@
           компетенции продавцов, месторасположение, ассортимент, ценовая политика и сервис, позволяют не просто продать
           человеку, а сделать его постоянным клиентом нашей компании.
         </p>
-        <p>Мы живем в мире высоких скоростей и от того как быстро вы можете решить проблему своего клиента будет
-          зависеть успех вашего бизнеса,запчасти из наличия это скорость решения проблемы, автосервисы-партнеры могут не
-          записывать машину на следующий день,починить ее сегодня и сегодня же заработать свои кровные,разнообразие
-          ценовых предложений помогает нам не терять клиента и с достатком и тех у кого бюджет ограничен,мы вовремя
-          реагируем на изменения в автомобильном законодательстве и людям это нравится, например, в 2017 году лидером по
-          продажам был знак «Шипы». Он не был самым доходным товаром, но разместив на нём свой логотип, мы к тому же
-          неплохо прорекламировались<span
-            class="icon-thorns"></span>.</p>
+        <p>Мы живем в мире высоких скоростей и от того как быстро вы можете решить проблему клиента будет зависеть успех Вашего бизнеса. Запчасти из наличия это скорость решения проблемы. Автосервисы-партнеры могут не записывать машину на следующий день, а починить ее сегодня же и сразу заработать свои кровные. Разнообразие ценовых предложений помогает не терять клиентов с достатком и тех, у кого бюджет ограничен. Мы вовремя реагируем на изменения рынка. Так, например, в 2017 году лидером продаж стал знак «Шипы» <span class="icon-thorns"></span>. Он не был самым доходным товаром, но разместив на нём свой логотип, мы к тому же неплохо прорекламировались.
+        </p>
       </div>
     </div>
     <div class="row care-list">
@@ -826,7 +819,7 @@
         <h2 class="bottom-line">
           Закроем вопрос с персоналом
         </h2>
-        <h3 class="left-square left-square--personal">Откроем серкет, как быстро найти
+        <h3 class="left-square left-square--personal">Откроем секрет, как быстро найти
           квалифицированный персонал</h3>
         <p class="pl-30">Мы знаем как быстро найти кандидатов на должность менеджеров, кладовщика. И главное, как найти
           квалифицированных кандидатов, которые и будут приносить вам прибыль. </p>
@@ -1404,7 +1397,7 @@
         </h3>
       </div>
       <div class="modal-body  p-2 p-md-5 answer-mail">
-        <p>Введите ваши контактные данные. Специалист по франчайзингу свяжется с вами в течении 15 минут для уточнения
+        <p>Введите ваши контактные данные. Специалист по франчайзингу свяжется с вами для уточнения
           деталей и подготовки предварительной бизнес-модели дальнейшего масштабирования.
         </p>
         <form id="contactForm" role="document">
@@ -1445,6 +1438,7 @@
     </div>
   </div>
 </div>
+
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/jquery.magnific-popup.min.js"></script>
