правки по тексту

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
         <p class="subtitle">Магазин автозапчастей «РУЛЬ» можно открыть в трех форматах, от небольшой, и в то же время
           конкурентоспособной точки, до автомаркета с большим складом и торговым залом. Основное объединяющее правило —
           это грамотно сформированное наличие автозапчастей на складе, которое в большей мере определяет то, сколько вы
-          будете зарабатывать. Предлагаем вам ознакомиться с 3-мя основными форматами: </p>
+          будете зарабатывать.</p>
+        <p>Предлагаем вам ознакомиться с 3-мя основными форматами: </p>
       </div>
       <div class="col-lg-3 offset-lg-1">
         <div class="format-number">45</div>
@@ -149,7 +150,7 @@
         <a
           href="https://www.google.com/maps/embed?pb=!4v1525699626490!6m8!1m7!1sCAoSLEFGMVFpcFBCV2dnNVNaNGdmbnJ3aHVDcFJHd3NBQjlJTFRmSnlGU1FTcC1N!2m2!1d52.60255903594447!2d39.57727409899235!3f63.21746015424514!4f-24.718136293033396!5f0.7820865974627469"
           width="600" height="450" frameborder="0" style="border:0" allowfullscreen
-          class="format__tour modal-media" data-toggle="modal" data-target="#modal-media" ><span>Запустить виртуальный тур</span></a>
+          class="format__tour popup-gmaps"><span>Запустить виртуальный тур</span></a>
         <button class="format-item__btn" data-toggle="modal" data-target="#join">Запросить смету</button>
       </div>
       <div class="col-md-4 format-item anim anim-v-slide td-2">
@@ -196,7 +197,7 @@
       </div>
       <div class="col-lg-8">
         <div class="video__player">
-          <div class="video__youtube" id="rwbOSWBeuX0" style="width: 100%; height: 411px;"></div>
+          <div class="video__youtube" id="Fea39FaEA58" style="width: 100%; height: 411px;"></div>
         </div>
       </div>
       <div class="col-lg-4">
@@ -219,7 +220,7 @@
           кв.м. и минимальным складским запасом. </p>
         <p class="subtitle">В 2014 году был открыт второй магазин, в 2016 году первая точка продаж переехала в
           собственное здание, построенное в центре города. В 2017 году открылся третий магазин и тоже в собственном
-          здании. Кроме того уже несколько лет компания успешно развивает собственные автотехцентры. В 2018 году
+          здании. Кроме того, уже несколько лет компания успешно развивает собственные автотехцентры. В 2018 году
           стартовали продажи франшизы "РУЛЬ". Компания развивается уже десятый год. </p>
 
       </div>
@@ -428,7 +429,7 @@
           своего автотехцентра</h2>
         <p class="pb-30">Если вы являетесь владельцем собственного автотехцентра или небольшого автосервиса, то
           непременно стоит рассмотреть вариант открытия собственного магазина автозапчастей, который в синергии позволит
-          больше зарабатывать и автотехцентру и магазину. Свяжитесь с нами и мы расскажем о собственном опыте и дадим
+          больше зарабатывать и автотехцентру, и магазину. Свяжитесь с нами и мы расскажем о собственном опыте, и дадим
           четкий план действий. </p>
         <button class="bg-white" data-toggle="modal" data-target="#join">Запросить коммерческое предложение</button>
         <a class="accordion_toggle d-none"><span>Смотреть</span> <i class="arrow-down"></i></a>
@@ -447,11 +448,11 @@
         <h2 class="bottom-line">Автолюбители покупают
           у нас не из-за цен</h2>
         <p class="subtitle subtitle--bold">
-          Наш продукт вобрал в себя лучшие IT-технологии и технологии продаж. Мы создаём светлый интерьер магазина,
+          Наш продукт вобрал в себя лучшие IT-технологии и методики продаж. Мы создаём светлый интерьер магазина,
           компетенции продавцов, месторасположение, ассортимент, ценовая политика и сервис, позволяют не просто продать
           человеку, а сделать его постоянным клиентом нашей компании.
         </p>
-        <p>Мы живем в мире высоких скоростей и от того как быстро вы можете решить проблему клиента будет зависеть успех Вашего бизнеса. Запчасти из наличия это скорость решения проблемы. Автосервисы-партнеры могут не записывать машину на следующий день, а починить ее сегодня же и сразу заработать свои кровные. Разнообразие ценовых предложений помогает не терять клиентов с достатком и тех, у кого бюджет ограничен. Мы вовремя реагируем на изменения рынка. Так, например, в 2017 году лидером продаж стал знак «Шипы» <span class="icon-thorns"></span>. Он не был самым доходным товаром, но разместив на нём свой логотип, мы к тому же неплохо прорекламировались.
+        <p>Мы живем в мире высоких скоростей и от того, как быстро вы можете решить проблему клиента, будет зависеть успех Вашего бизнеса. Запчасти из наличия это скорость решения проблемы. Автосервисы-партнеры могут не записывать машину на следующий день, а починить ее сегодня же и сразу заработать свои кровные. Разнообразие ценовых предложений помогает привлекать клиентов с достатком и тех, у кого бюджет ограничен. Мы вовремя реагируем на изменения рынка. Так, например, в 2017 году лидером продаж стал знак «Шипы» <span class="icon-thorns"></span>. Он не был самым доходным товаром, но разместив на нём свой логотип, мы провели прекрасную рекламную кампанию и привлекли новых покупателей.
         </p>
       </div>
     </div>
@@ -501,8 +502,8 @@
         <p class="subtitle">
           Мы, как никто другой, знаем, как важна поддержка на старте в бизнесе, нам так её не хватало в далеком 2008
           году. Наша задача сегодня — помочь вам не совершить банальных ошибок, которые так больно отражаются на
-          бизнес-счете предпринимателя. Давайте разберемся с основными аспектами нашего будущего сотрудничества:
-        </p>
+          бизнес-счете предпринимателя.</p>
+        <p>Давайте разберемся с основными аспектами нашего будущего сотрудничества:</p>
         <h3 class="left-square">Поможем с подбором помещения</h3>
         <p class="pl-30 pt-20 pl-sm-25">Со слов Чичваркина, основателя сети «Евросеть», залог успеха ритейла это:
           Location,
@@ -774,9 +775,8 @@
           Запросите полноценную презентацию системы,
           чтобы по-настоящему оценить богатейший функционал
         </h3>
-        <p>Нашим потенциальным франчайзи, которые уже подписали договор мы с гордостью покажем и расскажем как работать
-          с нашей базой знаний, а так же дадим доступ к закрытой Базе знаний с архивом обучающих видео по нашей
-          системе. </p>
+        <p>Нашим потенциальным франчайзи, которые уже подписали договор, мы с гордостью покажем и расскажем как работать
+          с нашей системой, а так же дадим доступ к закрытой Базе знаний с архивом обучающих видео. </p>
       </div>
     </div>
     <div class="row presentation__list anim anim-v-slide">
@@ -832,9 +832,9 @@
           пригласим вас вместе на обучение в наш
           тренинговый центр</h3>
         <p class="pl-30">Обучение проходит в течении 2-х недель в тренинговом центре, где опытные специалисты расскажут
-          как работать на специализированных программах, как правильно общаться с покупателями, как вести себя в
-          нестандартных ситуациях и многое другое. По окончании тренингов каждый продавец проходит аттестацию и только в
-          случе успешных результатов допускается к продажам в Вашем магазине.</p>
+          как работать в специализированных программах, как правильно общаться с покупателями, как вести себя в
+          нестандартных ситуациях и многое другое. По окончании тренингов каждый продавец проходит аттестацию, и только в
+          случе успешных результатов, допускается к продажам в Вашем магазине.</p>
       </div>
       <div class="col-12 col-lg-4 personal-aside">
         <div class="personal-aside__wrapper">
@@ -859,7 +859,7 @@
               Почему у вас не будет текучки и почему персонал будет вас любить
             </li>
             <li class="personal-aside___item">
-              Как менеджер может стать другом руководителю и работать как для себя
+              Как менеджер может стать другом руководителю и работать как для на себя
             </li>
           </ul>
         </div>
@@ -1040,7 +1040,7 @@
       </div>
       <div class="col-md-5 pl-15 order-1 order-md-2">
         <h3 class="audience__title">А это наша желанная целевая аудитория</h3>
-        <p class="audience__subtitle">В России нет улиц, по которым ездят только «корейцы», «японцы» или «европейцы»
+        <p class="audience__subtitle">В России нет улиц, по которым ездят только «корейцы», «японцы» или «европейцы»,
           поэтому мы приняли стратегическое решение заниматься мультибрендом, чтобы не смотреть как мимо нас едут наши
           потенциальные клиенты!</p>
       </div>
@@ -1070,7 +1070,7 @@
         <div class="marketing__img-wrapper"><img src="/img/marketing/marketing2.jpg" width="227" alt="фото"></div>
         <p class="pl-30">У нас есть та самая заветная кнопка «Включения потока клиентов». Мы дадим четкую инструкцию,
           как её
-          активировать и как управлять ))) </p>
+          активировать и как управлять. </p>
       </div>
       <div class="col-md-4 anim anim-v-slide td-2">
         <h3 class="left-square">Статистику
@@ -1305,7 +1305,7 @@
               <div class="contacts__name">Игорь Холмецкий</div>
               <a href="https://vk.com/id3282671" target="_blank" class="contacts__vk"></a>
               <a href="https://www.instagram.com/igorholmeckii" target="_blank" class="contacts__instagramm"></a>
-              <a href="tel:+79058550505" class="contacts__phone">+7 905-855-05-05</a>
+              <a href="tel:+79058550505" class="contacts__phone">+7 905 855-05-05</a>
             </div>
           </div>
           <div class="contacts__item">
@@ -1314,7 +1314,7 @@
               <div class="contacts__name">Алексей Скотников</div>
               <a href="https://vk.com/alexeysotnikov" target="_blank" class="contacts__vk"></a>
               <a href="https://www.instagram.com/alexey.sotnikov" target="_blank" class="contacts__instagramm"></a>
-              <a href="tel:+79205119211" class="contacts__phone">+7 920-511-92-11</a>
+              <a href="tel:+79205119211" class="contacts__phone">+7 920 511-92-11</a>
             </div>
           </div>
           <div class="contacts__item">
@@ -1323,7 +1323,7 @@
               <div class="contacts__name">Евгений Комаров</div>
               <a href="https://vk.com/id4785818" target="_blank" class="contacts__vk"></a>
               <a href="https://www.instagram.com/komarovea" target="_blank" class="contacts__instagramm"></a>
-              <a href="tel:+79103574027" class="contacts__phone">+7 910-357-40-27</a>
+              <a href="tel:+79103574027" class="contacts__phone">+7 910 357-40-27</a>
             </div>
           </div>
         </div>
@@ -1398,7 +1398,7 @@
       </div>
       <div class="modal-body  p-2 p-md-5 answer-mail">
         <p>Введите ваши контактные данные. Специалист по франчайзингу свяжется с вами для уточнения
-          деталей и подготовки предварительной бизнес-модели дальнейшего масштабирования.
+          деталей и подготовки предварительной бизнес-модели открытия магазина.
         </p>
         <form id="contactForm" role="document">
           <div class="form-group">
